# kamodo-dask

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WorkLog.md  dev-requirements.txt  dev.Dockerfile  docker-compose.yml  requirements.txt  setup.cfg
docs/: interpolator.md
kamodo_dask/: dask_config.py  kamodo_dask.py
test/: test_parquet_load.py  test_parquet_prod.py
