[metadata]
name = kamodo_dask
version = 0.1
author = Asher Pembroke
author_email = apembroke@gmail.com
description = A functional api for dask hosted data
url = https://github.com/ensemblegov/kamodo-dask
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.8
	Operating System :: OS Independent
	License :: OSI Approved
license = MIT


[options]
packages = kamodo_dask
python_requires = >= 3.8
include_package_data = True
install_requires =
  dask